tests/ui/type-alias-impl-trait/impl_trait_in_trait_defined_outside_trait.stderr
error[E0308]: mismatched types
  --> $DIR/impl_trait_in_trait_defined_outside_trait.rs:15:30
   |
LL |     type Assoc = impl std::fmt::Debug;
   |                  -------------------- the expected opaque type
LL |     fn foo() {
LL |         let x: Self::Assoc = 42;
   |                -----------   ^^ expected opaque type, found integer
   |                |
   |                expected due to this
   |
   = note: expected opaque type `<() as Trait>::Assoc`
                     found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/impl_trait_in_trait_defined_outside_trait.rs:31:30
   |
LL |     type Assoc = impl std::fmt::Debug;
   |                  -------------------- the expected opaque type
LL |     const FOO: () = {
LL |         let x: Self::Assoc = 42;
   |                -----------   ^^ expected opaque type, found integer
   |                |
   |                expected due to this
   |
   = note: expected opaque type `<() as Trait2>::Assoc`
                     found type `{integer}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
